# rules_python_torch_tensorrt_error_reproduction

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-testlogs  bazel-tmp
src/: BUILD  hello_world.py  main.py
tools/python_requirements/: requirements.in  requirements_lock.txt
