module(
    name = "my_project",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_uv", version = "0.1.0")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
        hub_name = "pypi",
    requirements_lock = "//tools/python_requirements:requirements_lock.txt",
)
use_repo(pip, "pypi")
